--- a/environment.yml
+++ b/environment.yml
@@ -9,6 +9,7 @@ dependencies:
   - pillow=4.2.1
   - scipy=0.19.1
   - scikit-learn=0.19.0
+  - matplotlib>=2.0.2
   - pip
   - pip:
     - tensorflow-tensorboard>=0.1.5
