Add some figure and sections links.

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,4 +1,6 @@
 all:
-	pandoc meta.yaml *.md \
+	pandoc meta.yaml [1-9][0-9]_*.md \
+		-F pandoc-crossref \
+		-F pandoc-citeproc \
 		--bibliography library.bib \
 		-o report.pdf
