--- a/docs/meta.yaml
+++ b/docs/meta.yaml
@@ -1,8 +1,19 @@
 ---
 title: Depth Estimation using Generative Adversarial Networks
 author:
-  - Nina Wiedermann
   - Alexander Höreth
+  - Nina Wiedermann
+  - Robin Weiss
 institute: Institute of Cognitive Science, University of Osnabrück
 date: 30.09.2017
+codeBlockCaptions: True
+figPrefix:
+  - figure
+  - figures
+lstPrefix:
+  - listing
+  - listings
+secPrefix:
+  - section
+  - sections
 ...
