--- a/docs/meta.yaml
+++ b/docs/meta.yaml
@@ -2,7 +2,7 @@
 title: Depth Estimation using Generative Adversarial Networks
 author:
   - Alexander Höreth
-  - Nina Wiedermann
+  - Nina Wiedemann
   - Robin Weiss
 institute: Institute of Cognitive Science, University of Osnabrück
 date: 30.09.2017
